- Fixed issue with nav menu getting squashed in some sites when in customizer - Made mobile nav menu responsive - now it stays to top right if logo is small and device has enough width to save header height - Fixed a css property that did not have a value and semicolon - Footer widget size now auto-scales depending on its content - Made site info shrink and wrap to accommodate long site names

--- a/style.css
+++ b/style.css
@@ -952,7 +952,6 @@ body {
 
 .widget {
     margin: 0 0 30px;
-	padding : 
     box-sizing: border-box;
 	box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 16px;
 }
@@ -1360,14 +1359,17 @@ button:hover, .read-more:hover, html input[type="button"]:hover, input[type="res
 }
 
 .footer-widget {
-	width: 300px;
+	flex-basis: fit-content;
+	max-width: 350px;
 	flex-flow: column;
 	padding: 10px;
 }
 
 .site-info {
   display: flex;
+  flex-flow: row wrap;
   flex-grow: 1;
+  flex-shrink: 1;
   min-width: 100%;
   align-items: center;
   justify-content: center;
@@ -1425,13 +1427,13 @@ button:hover, .read-more:hover, html input[type="button"]:hover, input[type="res
 	.site-header-wrapper {
 		
 		display: flex;
-		flex-direction: row;
 		flex-flow: row wrap;
 		justify-content: flex-start;
 	}
 	
-	.site-branding {
-		width: 100%;
+	.site-branding img {
+		width: 100% !important;
+		height: auto !important;
 	}
 	
 	.main-navigation {
